[gd_scene load_steps=4 format=3 uid="uid://d31ex16enf1lx"]

[ext_resource type="Script" uid="uid://xg2peasheup1" path="res://Scripts/main_menu.gd" id="1_qqk0j"]
[ext_resource type="Texture2D" uid="uid://h7ye2y74qngt" path="res://Assets/Sprites/background0.png" id="2_vytfc"]
[ext_resource type="AudioStream" uid="uid://dv821em0jfanj" path="res://Assets/Sound/MainMenuMusic.mp3" id="3_t475i"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqk0j")

[node name="CenterContainer" type="CenterContainer" parent="."]
top_level = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ControlsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -959.0
offset_top = -555.0
offset_right = 965.0
offset_bottom = 515.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -26)
texture = ExtResource("2_vytfc")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t475i")
autoplay = true
bus = &"Music"
parameters/looping = true
